--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+server.port=8081
+spring.datasource.url=jdbc:mysql://nofluffcars_db:3306/nofluffcars?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
