prepared for angular app connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
 spring.datasource.url=jdbc:mysql://nofluffcars_db:3306/nofluffcars?useTimezone=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/nofluffcars_data
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
